<resources>
    <string name="app_name">Reversi</string>
    <string name="collapse_settings">Collapse Settings</string>
    <string name="expand_settings">Expand Settings</string>
    <string name="mail_us">Mail Us</string>
    <string name="go_home">Go Home</string>
    <string name="call_us">Call Us</string>
    <string name="second_player_s_pieces">Second Player\'s Pieces</string>
    <string name="first_player_s_pieces">First Player\'s Pieces</string>
    <string name="current_player_null">Current Player: NULL</string>
    <string name="turn_x">Turn: X</string>
    <string name="time_xx">Time: XX</string>
    <string name="new_game">New Game</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="go_to_contact_us">Go To Contact Us</string>
    <string name="reversi_logo">Reversi Logo</string>
    <string name="quick_game">Quick Game</string>
    <string name="play_game">Play Game</string>
    <string name="records">Records</string>
    <string name="select_records">Select records</string>
    <string name="delete_selected_records">Delete Selected Records</string>
    <string name="all">All</string>
    <string name="delete_mode">Delete Mode</string>
    <string name="exit_delete_mode">Exit Delete Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="change_sorting_order">Change Sorting Order</string>
    <string name="order_by">Order By</string>
    <string name="enter_delete_mode">Enter Delete Mode</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">Extreme</string>
    <string name="local_game">Local Game</string>
    <string name="settings">Settings</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="toggle_expanded_settings">Toggle Expanded Settings</string>
    <string name="show_more">Show more</string>
    <string name="sound">Sound</string>
    <string name="reset_sound_setting">Reset Sound Setting</string>
    <string name="vibrate">Vibrate</string>
    <string name="reset_vibrate_setting">Reset Vibrate Setting</string>
    <string name="background_music">Background Music</string>
    <string name="reset_background_music_setting">Reset Background Music Setting</string>
    <string name="endgame_dialog">Endgame Dialog</string>
    <string name="reset_endgame_dialog_setting">Reset Endgame Dialog Setting</string>
    <string name="show_hints">Show Hints</string>
    <string name="reset_show_hints_setting">Reset Show Hints Setting</string>
    <string name="ask_before_save_game">Ask Before Save Game</string>
    <string name="reset_ask_before_saving_game_setting">Reset Ask Before Saving Game Setting</string>
    <string name="always_load_saved_game">Always Load Saved Game</string>
    <string name="reset_always_load_saved_game_setting">Reset Always Load Saved Game Setting</string>
    <string name="first_player">First Player</string>
    <string name="second_player">Second Player</string>
    <string name="starting_player">Starting Player</string>
    <string name="reset_starting_player">Reset Starting Player</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="time_counting">Time Counting</string>
    <string name="reset_time_counting_order">Reset Time Counting Order</string>
    <string name="popup_game_duration_picker">Popup Game Duration Picker</string>
    <string name="first_player_color">First Player Color</string>
    <string name="reset_first_player_s_piece_color">Reset First Player\'s Piece Color</string>
    <string name="second_player_color">Second Player Color</string>
    <string name="reset_second_player_s_color">Reset Second Player\'s Color</string>
    <string name="board_matrix_side_size">Board Matrix Side Size</string>
    <string name="starting_size_for_each_player">Starting Size For Each Player</string>
    <string name="board_size">Board Size</string>
    <string name="reset_board_size">Reset Board Size</string>
    <string name="start_size">Start Size</string>
    <string name="reset_starting_size">Reset Starting Size</string>
    <string name="default_difficulty">Default Difficulty</string>
    <string name="reset_default_difficulty">Reset Default Difficulty</string>
    <string name="computer">Computer</string>
    <string name="human">Human</string>
    <string name="first_turn_player">First Turn\'s Player</string>
    <string name="reset_human_starts_setting">Reset Human Starts Setting</string>
    <string name="profile_image">Profile Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="vs">\ VS \ </string>
    <string name="date_finished_dd_mm_yy">Date Finished: DD/MM/YY</string>
    <string name="difficulty_null">Difficulty: NULL</string>
    <string name="winner_player1">Winner: Player1</string>
    <string name="player1_s_pieces_xx">Player1\'s Pieces: XX</string>
    <string name="player2_s_pieces_xx">Player2\'s Pieces: XX</string>
    <string name="turns_played_xx">Turns Played: XX</string>
    <string name="time_passed_xx_xx">Time Passed: XX:XX</string>
    <string name="game_id_xx">Game Id: XX</string>
    <string name="close">Close</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="average_time_per_turn">Average Time per Turn:</string>
    <string name="xx_xxx_seconds">XX.xxx seconds</string>
    <string name="first_player_s_average">First Player\'s Average</string>
    <string name="second_player_s_average">Second Player\'s Average</string>
    <string name="game_over">Game Over</string>
    <string name="share">Share</string>
    <string name="x">X</string>
    <string name="pick_game_duration">Pick Game Duration</string>
    <string name="reset_game_duration">Reset Game Duration</string>
    <string name="piece_amount">Piece Amount</string>
    <string name="player">Player</string>
    <string name="disc">Disc</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
</resources>