<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7E57C2"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <Button
        android:id="@+id/dBtnClose"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/buttonshape"
        android:foreground="?attr/selectableItemBackground"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="@+id/dBtnShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dBtnShare" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:paddingBottom="8dp"
        android:text="@string/game_over"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dBtnNewGame"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/buttonshape"
        android:foreground="?attr/selectableItemBackground"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/new_game"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="@+id/dBtnShare"
        app:layout_constraintStart_toEndOf="@+id/dBtnClose"
        app:layout_constraintTop_toTopOf="@+id/dBtnShare" />

    <ImageButton
        android:id="@+id/dBtnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
        app:srcCompat="@drawable/share_icon"
        android:contentDescription="@string/share" />
</androidx.constraintlayout.widget.ConstraintLayout>